--- a/ClassificationMachineLearning.ipynb
+++ b/ClassificationMachineLearning.ipynb
@@ -13,7 +13,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lakshaychhabra/anaconda3/lib/python3.7/site-packages/sklearn/externals/joblib/__init__.py:15: DeprecationWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -743,11 +752,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = scipy.sparse.load_npz('data.npz')"
+    "data = scipy.sparse.load_npz('dataset/data.npz')"
    ]
   },
   {
@@ -761,16 +770,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'y'\n",
+    "filename = 'dataset/y'\n",
     "\n",
     "\n",
-    "outfile = open(filename,'wb')\n",
-    "pickle.dump(y,outfile)\n",
-    "outfile.close()\n",
+    "# outfile = open(filename,'wb')\n",
+    "# pickle.dump(y,outfile)\n",
+    "# outfile.close()\n",
     "\n",
     "infile = open(filename,'rb')\n",
     "y = pickle.load(infile)"
@@ -778,23 +787,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['tfidf.sav']"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "filename = 'tfidf.sav'\n",
-    "joblib.dump(tfidf, filename)"
+    "filename = 'dataset/tfidf.sav'\n",
+    "# joblib.dump(tfidf, filename)\n",
+    "tfidf = joblib.load(filename)"
    ]
   },
   {
@@ -825,28 +824,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['clf_final.sav']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "filename = 'clf_final.sav'\n",
-    "joblib.dump(clf_final, filename)"
+    "filename = 'dataset/clf_final.sav'\n",
+    "# joblib.dump(clf_final, filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
